adicionada section de jogos populares

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
         <section class="super-promotions">
 
-            <h1 class="title-super-promotions">
+            <h1 class="title-sections">
                 <span>Super promoções</span>
             </h1>
 
@@ -258,6 +258,50 @@
                             <div class="discount-card">
                                 <img src="img/icons/icon-promotion.svg">
                                 <span>40%</span>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide card-promotion">
+                            <img src="img/games/slider-promotions/yakuza-ps4.jpg" alt="The Yakuza PS4"
+                                class="promotions-img">
+
+                            <p class="title-card-promotion"> THE YAKUZA </p>
+
+                            <div class="price-card-promotions">
+                                <p class="oldPrice-card">De: R$219,99</p>
+                                <p class="priceUpdate-card">Por:</p>
+                                <p class="currentPrice-card">R$87,99</p>
+                            </div>
+
+                            <a href="txt/carrinho.txt" target="_blank" class="buy-btn">
+                                <span>Comprar</span>
+                            </a>
+
+                            <div class="discount-card">
+                                <img src="img/icons/icon-promotion.svg">
+                                <span>60%</span>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide card-promotion">
+                            <img src="img/games/slider-promotions/batman-ps4.jpg" alt="Bartman Arkman PS4"
+                                class="promotions-img">
+
+                            <p class="title-card-promotion"> BATMAN ARKRAM </p>
+
+                            <div class="price-card-promotions">
+                                <p class="oldPrice-card">De: R$89,99</p>
+                                <p class="priceUpdate-card">Por:</p>
+                                <p class="currentPrice-card">R$58,49</p>
+                            </div>
+
+                            <a href="txt/carrinho.txt" target="_blank" class="buy-btn">
+                                <span>Comprar</span>
+                            </a>
+
+                            <div class="discount-card">
+                                <img src="img/icons/icon-promotion.svg">
+                                <span>35%</span>
                             </div>
                         </div>
 
@@ -328,50 +372,6 @@
                         </div>
 
                         <div class="swiper-slide card-promotion">
-                            <img src="img/games/slider-promotions/yakuza-ps4.jpg" alt="The Yakuza PS4"
-                                class="promotions-img">
-
-                            <p class="title-card-promotion"> THE YAKUZA </p>
-
-                            <div class="price-card-promotions">
-                                <p class="oldPrice-card">De: R$219,99</p>
-                                <p class="priceUpdate-card">Por:</p>
-                                <p class="currentPrice-card">R$87,99</p>
-                            </div>
-
-                            <a href="txt/carrinho.txt" target="_blank" class="buy-btn">
-                                <span>Comprar</span>
-                            </a>
-
-                            <div class="discount-card">
-                                <img src="img/icons/icon-promotion.svg">
-                                <span>60%</span>
-                            </div>
-                        </div>
-
-                        <div class="swiper-slide card-promotion">
-                            <img src="img/games/slider-promotions/batman-ps4.jpg" alt="Bartman Arkman PS4"
-                                class="promotions-img">
-
-                            <p class="title-card-promotion"> BATMAN ARKRAM </p>
-
-                            <div class="price-card-promotions">
-                                <p class="oldPrice-card">De: R$89,99</p>
-                                <p class="priceUpdate-card">Por:</p>
-                                <p class="currentPrice-card">R$58,49</p>
-                            </div>
-
-                            <a href="txt/carrinho.txt" target="_blank" class="buy-btn">
-                                <span>Comprar</span>
-                            </a>
-
-                            <div class="discount-card">
-                                <img src="img/icons/icon-promotion.svg">
-                                <span>35%</span>
-                            </div>
-                        </div>
-
-                        <div class="swiper-slide card-promotion">
                             <img src="img/games/slider-promotions/sonic-xbox.jpg" alt="Sonic Colors XBOX ONE"
                                 class="promotions-img">
 
@@ -394,15 +394,15 @@
                         </div>
 
                         <div class="swiper-slide card-promotion">
-                            <img src="img/games/slider-promotions/cod-ps5.jpg" alt="Call of Duty"
+                            <img src="img/games/slider-promotions/demon-slayer-xbox.jpg" alt="Demon Slayer"
                                 class="promotions-img">
 
-                            <p class="title-card-promotion"> CALL OF DUTY </p>
+                            <p class="title-card-promotion"> DEMON SLAYER </p>
 
                             <div class="price-card-promotions">
-                                <p class="oldPrice-card">De: R$179,99</p>
+                                <p class="oldPrice-card">De: R$269,99</p>
                                 <p class="priceUpdate-card">Por:</p>
-                                <p class="currentPrice-card">R$125,99</p>
+                                <p class="currentPrice-card">R$134,99</p>
                             </div>
 
                             <a href="txt/carrinho.txt" target="_blank" class="buy-btn">
@@ -411,7 +411,7 @@
 
                             <div class="discount-card">
                                 <img src="img/icons/icon-promotion.svg">
-                                <span>25%</span>
+                                <span>50%</span>
                             </div>
                         </div>
 
@@ -439,11 +439,88 @@
                     });
                 </script>
             </div>
-        </section>
+        </section> <br>
 
-        <section>
-            
-        </section>
+        <section class="maisPopulares">
+
+            <h1 class="title-sections">
+                <span>Mais populares</span>
+            </h1>
+
+            <div class="populares-grid-container">
+
+                <div class="populares-grid-item">
+                    <a href="#">
+                        <img src="img/games/mais-populares/free fire.png" alt="Free Fire">
+                        <p>Free Fire</p>
+                    </a>
+                </div>
+
+                <div class="populares-grid-item">
+                    <a href="#">
+                        <img src="img/games/mais-populares/call-of-duty-mobile.jpg" alt="Call of Duty Mobile">
+                        <p>Call of Duty&reg: Mobile</p>
+                    </a>
+                </div>
+
+                <div class="populares-grid-item">
+                    <a href="#">
+                        <img src="img/games/mais-populares/lol.jpg" alt="League of Legends">
+                        <p>League of Legends</p>
+                    </a>
+                </div>
+
+                <div class="populares-grid-item">
+                    <a href="#">
+                        <img src="img/games/mais-populares/mobile-legends.jpg" alt="Mobile Legends">
+                        <p>Mobile Legends</p>
+                    </a>
+                </div>
+
+                <div class="populares-grid-item">
+                    <a href="#">
+                        <img src="img/games/mais-populares/minecraft.jpg" alt="Minecraft">
+                        <p>Minecraft</p>
+                    </a>
+                </div>
+
+                <div class="populares-grid-item">
+                    <a href="#">
+                        <img src="img/games/mais-populares/pubg-mobile.jpg" alt="Pubg Mobile">
+                        <p>Pubg Mobile</p>
+                    </a>
+                </div>
+
+                <div class="populares-grid-item">
+                    <a href="#">
+                        <img src="img/games/mais-populares/ragnarok.jpg" alt="Ragnarok M">
+                        <p>Ragnarok M</p>
+                    </a>
+                </div>
+
+                <div class="populares-grid-item">
+                    <a href="#">
+                        <img src="img/games/mais-populares/valorant.jpg" alt="Valorant">
+                        <p>Valorant</p>
+                    </a>
+                </div>
+
+                <div class="populares-grid-item">
+                    <a href="#">
+                        <img src="img/games/mais-populares/asphalt9.jpg" alt="Asphalt 9">
+                        <p>Asphalt 9</p>
+                    </a>
+                </div>
+
+                <div class="populares-grid-item">
+                    <a href="#">
+                        <img src="img/games/mais-populares/lords-mobile.png" alt="Lords Mobile">
+                        <p>Lords Mobile</p>
+                    </a>
+                </div>
+            </div>
+
+        </section> <br>
 
     </main>
 
