começo section lancamentos

--- a/index.html
+++ b/index.html
@@ -178,23 +178,23 @@
                     </div>
 
                     <div id="atual" class="image"><a href="txt/click-slider.txt" target="_blank">
-                            <img src="img/games/0.png" alt="Counter Strike: Global Offensive"></a>
+                            <img src="img/games/carousel/0.png" alt="Counter Strike: Global Offensive"></a>
                     </div>
 
                     <div class="image"><a href="txt/click-slider.txt" target="_blank">
-                            <img src="img/games/1.png" alt="FIFA 22"></a>
+                            <img src="img/games/carousel/1.png" alt="FIFA 22"></a>
                     </div>
 
                     <div class="image"><a href="txt/click-slider.txt" target="_blank">
-                            <img src="img/games/2.png" alt="Grand Theft Auto V"></a>
+                            <img src="img/games/carousel/2.png" alt="Grand Theft Auto V"></a>
                     </div>
 
                     <div class="image"><a href="txt/click-slider.txt" target="_blank">
-                            <img src="img/games/3.png" alt="League of Legends"></a>
+                            <img src="img/games/carousel/3.png" alt="League of Legends"></a>
                     </div>
 
                     <div class="image"><a href="txt/click-slider.txt" target="_blank">
-                            <img src="img/games/4.png" alt="Gpd of War"></a>
+                            <img src="img/games/carousel/4.png" alt="Gpd of War"></a>
                     </div>
 
                     <div class="balls"></div>
@@ -521,6 +521,31 @@
             </div>
 
         </section> <br>
+
+        <section class="lancamentos">
+
+            <h1 class="title-sections">
+                <span>Lançamentos</span>
+            </h1>
+
+            <div class="swiper-lancamentos">
+                <div class="banner-lancamento">
+                    <img src="img/games/lancamentos/theLastOfUs-part2.png" alt="The Last Of Us Part II">
+                    <a href="#"><span>COMPRE AGORA</span></a>
+                </div>
+
+                <div class="banner-lancamento">
+                    <img src="img/games/lancamentos/cod-coldWar.jpg" alt="Call of Duty: Cold War">
+                    <a href="#"><span>COMPRE AGORA</span></a>
+                </div>
+
+                <div class="banner-lancamento">
+                    <img src="img/games/lancamentos/fifa22.png" alt="FIFA 2022">
+                    <a href="#"><span>COMPRE AGORA</span></a>
+                </div>
+            </div>
+
+        </section>
 
     </main>
 
