--- a/index.html
+++ b/index.html
@@ -278,10 +278,10 @@
                         </div>
 
                         <div class="swiper-slide card-promotion">
-                            <img src="img/games/slider-promotions/batman-ps4.jpg" alt="Bartman Arkman PS4"
+                            <img src="img/games/slider-promotions/batman-ps4.jpg" alt="Bartman Arkhan PS4"
                                 class="promotions-img">
 
-                            <p class="title-card-promotion"> BATMAN ARKRAM </p>
+                            <p class="title-card-promotion"> BATMAN ARKHAM </p>
 
                             <div class="price-card-promotions">
                                 <p class="oldPrice-card">De: R$89,99</p>
