--- a/index.html
+++ b/index.html
@@ -80,13 +80,9 @@
             </div>
 
             <div class="shopping-cart">
-                <ul>
-                    <li>
-                        <a href="txt/carrinho.txt">
-                            <img src="img/icons/outline-shopping-cart.png" alt="Carrinho">
-                        </a>
-                    </li>
-                </ul>
+                <a href="txt/carrinho.txt">
+                    <img src="img/icons/outline-shopping-cart.png" alt="Carrinho">
+                </a>
             </div>
 
         </section>
@@ -94,8 +90,8 @@
         <hr id="divider-to-categories">
 
         <section>
-            <nav class="categories">
-                <ul>
+            <nav class="nav-bar">
+                <ul class="categorias">
                     <li><a href="#">Jogos mobile</a>
                         <ul class="sub-categorias">
                             <li><a href="#">free fire</a></li>
@@ -115,7 +111,7 @@
                             <li><a href="#">Grand Theft Auto V</a></li>
                         </ul>
                     </li>
-                    <li><a href="txt/click-categoria.txt">Playstation</a>
+                    <li><a href="#">Playstation</a>
                         <ul class="sub-categorias">
                             <li><a href="#">FIFA</a></li>
                             <li><a href="#">God of war</a></li>
