--- a/index.html
+++ b/index.html
@@ -85,6 +85,98 @@
                 </a>
             </div>
 
+            <input type="checkbox" id="check-nav">
+            <label for="check-nav" class="checkbtn">
+                <i class="fas fa-bars"></i>
+            </label>
+
+            <nav class="categorias-hidden">
+                <div>
+                    <input type="checkbox" id="check-mobile">
+                    <label for="check-mobile" class="checkbtn2"> MOBILE
+                        <i class="fas fa-bars"></i>
+                    </label>
+                    <div>
+                        <a href="#">Free Fire</a>
+                        <a href="#">Wild Rift</a>
+                        <a href="#">Pubg Mobile</a>
+                        <a href="#">Clash Royale</a>
+                        <a href="#">Mobile Legends</a>
+                    </div>
+                </div>
+
+                <div>
+                    <input type="checkbox" id="check-jogosPC">
+                    <label for="check-jogosPC" class="checkbtn2"> JOGOS PC
+                        <i class="fas fa-bars"></i>
+                    </label>
+                    <div>
+                        <a href="#">CS:GO</a>
+                        <a href="#">Fortnite</a>
+                        <a href="#">Call of Duty</a>
+                        <a href="#">Grand Theft Auto</a>
+                        <a href="#">League of Legends</a>
+                    </div>
+                </div>
+
+                <div>
+                    <input type="checkbox" id="check-playstation">
+                    <label for="check-playstation" class="checkbtn2"> PLAYSTATION
+                        <i class="fas fa-bars"></i>
+                    </label>
+                    <div>
+                        <a href="#">FIFA</a>
+                        <a href="#">God of War</a>
+                        <a href="#">Final Fantasy</a>
+                        <a href="#">Street Figther</a>
+                        <a href="#">Gift Card Digital</a>
+                    </div>
+                </div>
+
+                <div>
+                    <input type="checkbox" id="check-xbox">
+                    <label for="check-xbox" class="checkbtn2"> XBOX
+                        <i class="fas fa-bars"></i>
+                    </label>
+                    <div>
+                        <a href="#">Diablo</a>
+                        <a href="#">Fortnite</a>
+                        <a href="#">Battlefield</a>
+                        <a href="#">Assassin's Creed</a>
+                        <a href="#">Gift Card Digital</a>
+                    </div>
+                </div>
+
+                <div>
+                    <input type="checkbox" id="check-steam">
+                    <label for="check-steam" class="checkbtn2"> STEAM
+                        <i class="fas fa-bars"></i>
+                    </label>
+                    <div>
+                        <a href="#">DOTA</a>
+                        <a href="#">Destiny</a>
+                        <a href="#">Dark Souls</a>
+                        <a href="#">Counter Strike</a>
+                        <a href="#">Gift Card Digital</a>
+                    </div>
+                </div>
+
+                <div>
+                    <input type="checkbox" id="check-gift">
+                    <label for="check-gift" class="checkbtn2"> GIFT CARD
+                        <i class="fas fa-bars"></i>
+                    </label>
+                    <div>
+                        <a href="#">XBOX</a>
+                        <a href="#">STEAM</a>
+                        <a href="#">PLAYSTATION</a>
+                        <a href="#">PLAY STORE</a>
+                        <a href="#">APPLE STORE</a>
+                    </div>
+                </div>
+
+            </nav>
+
         </section>
 
         <hr id="divider-to-categories">
@@ -92,7 +184,7 @@
         <section>
             <nav class="nav-bar">
                 <ul class="categorias">
-                    <li><a href="#">Jogos mobile</a>
+                    <li><a href="#">Mobile</a>
                         <ul class="sub-categorias">
                             <li><a href="#">free fire</a></li>
                             <li><a href="#">Wild rift</a></li>
@@ -107,8 +199,8 @@
                             <li><a href="#">CS:GO</a></li>
                             <li><a href="#">Fortnite</a></li>
                             <li><a href="#">Call of Duty</a></li>
+                            <li><a href="#">Grand Theft Auto</a></li>
                             <li><a href="#">League of Legends</a></li>
-                            <li><a href="#">Grand Theft Auto V</a></li>
                         </ul>
                     </li>
                     <li><a href="#">Playstation</a>
@@ -131,8 +223,8 @@
                     </li>
                     <li><a href="#">steam</a>
                         <ul class="sub-categorias">
-                            <li><a href="#">Dota 2</a></li>
-                            <li><a href="#">Destiny 2</a></li>
+                            <li><a href="#">Dota</a></li>
+                            <li><a href="#">Destiny</a></li>
                             <li><a href="#">Dark Souls</a></li>
                             <li><a href="#">Counter Strike</a></li>
                             <li><a href="#">Gift Card Digital</a></li>
@@ -153,7 +245,7 @@
 
     </header>
 
-    <main>
+    <!-- <main>
         <section class="container-carousel">
 
             <div class="carousel">
@@ -534,9 +626,9 @@
 
         </section>
 
-    </main>
+    </main> -->
 
-    <footer>
+    <!-- <footer>
         <section class="info-dh">
             <div class="payment-methods">
 
@@ -639,7 +731,7 @@
             <strong>Precisa de<br>ajuda?</strong>
             <img src="img/icons/Call-Service.png">
         </a>
-    </section>
+    </section> -->
 
 </body>
 
