finalizado header responsivo

--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
                 <a href="https://wa.me/5511976070718" target="_blank" id="whatsapp">
                     <img loading="lazy" src="img/icons/whatsapp_white.svg" class="icon-overheader">Whatsapp
                 </a>
+
+                <a href="#" id="supportHidden">
+                    <img loading="lazy" src="img/icons/support_agent_white_24dp.svg" class="icon-overheader">Suporte
+                </a>
+
+                <a href="#" id="loginHidden">
+                    <img loading="lazy" src="img/icons/person_white_24dp.svg" class="icon-overheader">Login/Cadastro
+                </a>
+
             </div>
 
             <div>
