finalizado footer responsivo

--- a/index.html
+++ b/index.html
@@ -637,13 +637,21 @@
 
     </main> -->
 
-    <!-- <footer>
-        <section class="info-dh">
-            <div class="payment-methods">
 
-                <div class="payment-methods-title">
-                    <span>Formas de pagamento</span>
-                </div> <br>
+    <section class="chat-container">
+        <a href="#" class="chat">
+            <strong>Precisa de<br>ajuda?</strong>
+            <img src="img/icons/Call-Service.png">
+        </a>
+    </section>
+
+    <br>
+
+    <footer>
+        <section class="info-dh">
+            <div class="firstContainer-footer">
+
+                <span id="payment-methods-title">Formas de pagamento</span>     
 
                 <div class="payment-type">
                     <div id="credit-card">
@@ -695,10 +703,9 @@
                 </div>
             </div>
 
-            <div class="networks-container">
+            <div class="secondContainer-footer">
                 <div class="social-networks">
-                    <span class="social-networks-title">Siga-nos nas redes sociais</span>
-                    <br>
+                    <span id="social-networks-title">Siga-nos nas redes sociais</span>
                     <div class="social-networks-icons">
                         <a href="txt/social-network.txt" target="_blank"><img src="img/redes-sociais/facebook.png"
                                 alt="Facebook"></a>
@@ -709,7 +716,7 @@
                         <a href="txt/social-network.txt" target="_blank"><img src="img/redes-sociais/youtube.png"
                                 alt="Youtube"></a>
                     </div>
-                </div> <br><br>
+                </div> <br>
 
                 <div class="security">
                     <span>Segurança garantida</span>
@@ -723,7 +730,6 @@
             <p>
                 © 2021, DH Games Ltda. TODOS OS DIREITOS RESERVADOS. Todas as marcas são propriedade dos seus
                 respectivos donos nos EUA e em outros países.
-                <br>
                 Os Horários do site seguem a Hora Oficial de Brasília (GMT -3).
             </p> <br>
             <p>
@@ -734,13 +740,6 @@
             </p>
         </section>
     </footer>
-
-    <section class="chat-container">
-        <a href="#" class="chat">
-            <strong>Precisa de<br>ajuda?</strong>
-            <img src="img/icons/Call-Service.png">
-        </a>
-    </section> -->
 
 </body>
 
