finalizado section populares responsivo

--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
 
     </header>
 
-    <!-- <main>
-        <section class="container-carousel">
+    <main>
+        <!-- <section class="container-carousel">
 
             <div class="carousel">
 
@@ -295,8 +295,8 @@
 
             <script type="text/javascript" src="script-index.js"></script>
 
-        </section>
-
+        </section> -->
+<!-- 
         <section class="super-promotions">
 
             <h1 class="title-sections">
@@ -527,13 +527,13 @@
                     });
                 </script>
             </div>
-        </section> <br>
+        </section> <br> -->
 
         <section class="maisPopulares">
 
-            <h1 class="title-sections">
+            <h2 class="title-sections">
                 <span>Mais populares</span>
-            </h1>
+            </h2>
 
             <div class="populares-grid-container">
 
@@ -610,11 +610,11 @@
 
         </section> <br>
 
-        <section class="lancamentos">
+        <!-- <section class="lancamentos">
 
-            <h1 class="title-sections">
+            <h3 class="title-sections">
                 <span>Lançamentos</span>
-            </h1>
+            </h3>
 
             <div class="swiper-lancamentos">
                 <div class="banner-lancamento">
@@ -633,10 +633,9 @@
                 </div>
             </div>
 
-        </section>
+        </section> -->
 
-    </main> -->
-
+    </main>
 
     <section class="chat-container">
         <a href="#" class="chat">
@@ -644,8 +643,6 @@
             <img src="img/icons/Call-Service.png">
         </a>
     </section>
-
-    <br>
 
     <footer>
         <section class="info-dh">
