--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             <script type="text/javascript" src="script-index.js"></script>
 
         </section> -->
-<!-- 
+
         <section class="super-promotions">
 
             <h1 class="title-sections">
@@ -527,7 +527,7 @@
                     });
                 </script>
             </div>
-        </section> <br> -->
+        </section> <br>
 
         <section class="maisPopulares">
 
