--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
     <script src="https://kit.fontawesome.com/ca14b9e588.js" crossorigin="anonymous"></script>
-    <!-- Swiper JS -->
+    <!-- JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.js"></script>
 
 </head>
 
@@ -304,6 +310,264 @@
             </h1>
 
             <div class="cards-promotions-container">
+
+                <div class="card-promotion">
+                    <div>
+                        <img src="img/games/slider-promotions/apex-legends-ps4.jpg" alt="Apex Legends PS4"
+                            class="promotions-img">
+
+                        <div class="title-card-promotion"> APEX LEGENDS </div>
+
+                        <div class="price-card-promotions">
+                            <p class="oldPrice-card">De: R$79,99</p>
+                            <p class="priceUpdate-card">Por:</p>
+                            <p class="currentPrice-card">R$39,99</p>
+                        </div>
+
+                        <a href="#" class="buy-btn"> Comprar </a>
+
+                        <div class="discount-card">
+                            <img src="img/icons/icon-promotion.svg">
+                            <span>50%</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-promotion">
+                    <div>
+                        <img src="img/games/slider-promotions/dissidia-ps4.jpg" alt="Dissidia Final Fantasy"
+                            class="promotions-img">
+
+                        <p class="title-card-promotion"> DISSIDIA FINAL </p>
+
+                        <div class="price-card-promotions">
+                            <p class="oldPrice-card">De: R$69,99</p>
+                            <p class="priceUpdate-card">Por:</p>
+                            <p class="currentPrice-card">R$49,99</p>
+                        </div>
+
+                        <a href="#" class="buy-btn"> Comprar </a>
+
+                        <div class="discount-card">
+                            <img src="img/icons/icon-promotion.svg">
+                            <span>40%</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-promotion">
+                    <div>
+                        <img src="img/games/slider-promotions/yakuza-ps4.jpg" alt="The Yakuza PS4"
+                            class="promotions-img">
+
+                        <p class="title-card-promotion"> THE YAKUZA </p>
+
+                        <div class="price-card-promotions">
+                            <p class="oldPrice-card">De: R$219,99</p>
+                            <p class="priceUpdate-card">Por:</p>
+                            <p class="currentPrice-card">R$87,99</p>
+                        </div>
+
+                        <a href="#" class="buy-btn"> Comprar </a>
+
+                        <div class="discount-card">
+                            <img src="img/icons/icon-promotion.svg">
+                            <span>60%</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-promotion">
+                    <div>
+                        <img src="img/games/slider-promotions/batman-ps4.jpg" alt="Bartman Arkhan PS4"
+                            class="promotions-img">
+
+                        <p class="title-card-promotion"> BATMAN ARKHAM </p>
+
+                        <div class="price-card-promotions">
+                            <p class="oldPrice-card">De: R$89,99</p>
+                            <p class="priceUpdate-card">Por:</p>
+                            <p class="currentPrice-card">R$58,49</p>
+                        </div>
+
+                        <a href="#" class="buy-btn"> Comprar </a>
+
+                        <div class="discount-card">
+                            <img src="img/icons/icon-promotion.svg">
+                            <span>35%</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-promotion">
+                    <div>
+                        <img src="img/games/slider-promotions/battlefield-xbox.jpg" alt="Battlefield 2042"
+                            class="promotions-img">
+
+                        <p class="title-card-promotion"> BATTLEFIELD 2042 </p>
+
+                        <div class="price-card-promotions">
+                            <p class="oldPrice-card">De: R$199,99</p>
+                            <p class="priceUpdate-card">Por:</p>
+                            <p class="currentPrice-card">R$119,99</p>
+                        </div>
+
+                        <a href="#" class="buy-btn"> Comprar </a>
+
+                        <div class="discount-card">
+                            <img src="img/icons/icon-promotion.svg">
+                            <span>40%</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-promotion">
+                    <div>
+                        <img src="img/games/slider-promotions/dark-souls3-xbox.jpg" alt="Dark Souls III"
+                            class="promotions-img">
+
+                        <p class="title-card-promotion"> DARK SOULS III </p>
+
+                        <div class="price-card-promotions">
+                            <p class="oldPrice-card">De: R$79,99</p>
+                            <p class="priceUpdate-card">Por:</p>
+                            <p class="currentPrice-card">R$43,99</p>
+                        </div>
+
+                        <a href="#" class="buy-btn"> Comprar </a>
+
+                        <div class="discount-card">
+                            <img src="img/icons/icon-promotion.svg">
+                            <span>45%</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-promotion">
+                    <div>
+                        <img src="img/games/slider-promotions/assassins-creed-xbox.jpg" alt="Assassins Creed Unity"
+                            class="promotions-img">
+
+                        <p class="title-card-promotion"> ASSASSIN'S CREED </p>
+
+                        <div class="price-card-promotions">
+                            <p class="oldPrice-card">De: R$89,99</p>
+                            <p class="priceUpdate-card">Por:</p>
+                            <p class="currentPrice-card">R$62,99</p>
+                        </div>
+
+                        <a href="#" class="buy-btn"> Comprar </a>
+
+                        <div class="discount-card">
+                            <img src="img/icons/icon-promotion.svg">
+                            <span>30%</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-promotion">
+                    <div>
+                        <img src="img/games/slider-promotions/sonic-xbox.jpg" alt="Sonic Colors XBOX ONE"
+                            class="promotions-img">
+
+                        <p class="title-card-promotion"> SONIC COLORS </p>
+
+                        <div class="price-card-promotions">
+                            <p class="oldPrice-card">De: R$199,99</p>
+                            <p class="priceUpdate-card">Por:</p>
+                            <p class="currentPrice-card">R$99,99</p>
+                        </div>
+
+                        <a href="#" class="buy-btn"> Comprar </a>
+
+                        <div class="discount-card">
+                            <img src="img/icons/icon-promotion.svg">
+                            <span>50%</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-promotion">
+                    <div>
+                        <img src="img/games/slider-promotions/demon-slayer-xbox.jpg" alt="Demon Slayer"
+                            class="promotions-img">
+
+                        <p class="title-card-promotion"> DEMON SLAYER </p>
+
+                        <div class="price-card-promotions">
+                            <p class="oldPrice-card">De: R$269,99</p>
+                            <p class="priceUpdate-card">Por:</p>
+                            <p class="currentPrice-card">R$134,99</p>
+                        </div>
+
+                        <a href="#" class="buy-btn"> Comprar </a>
+
+                        <div class="discount-card">
+                            <img src="img/icons/icon-promotion.svg">
+                            <span>50%</span>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <script>
+
+                $('.cards-promotions-container').slick({
+                    dots: true,
+                    infinite: false,
+                    speed: 500,
+                    slidesToShow: 5,
+                    slidesToScroll: 2,
+                    responsive: [
+                        {
+                            breakpoint: 1050,
+                            settings: {
+                                slidesToShow: 4,
+                                slidesToScroll: 2,
+                                infinite: false,
+                                dots: true
+                            }
+                        },
+                        {
+                            breakpoint: 700,
+                            settings: {
+                                slidesToShow: 3,
+                                slidesToScroll: 2,
+                                infinite: false,
+                            }
+                        },
+                        {
+                            breakpoint: 540,
+                            settings: {
+                                slidesToShow: 2,
+                                slidesToScroll: 1,
+                                infinite: false,
+                            }
+                        },
+                        {
+                            breakpoint: 350,
+                            settings: {
+                                slidesToShow: 1,
+                                slidesToScroll: 1,
+                                infinite: false,
+                            }
+                        },
+                    ]
+                });
+
+            </script>
+
+        </section>
+
+
+        <!-- <section class="super-promotions">
+
+            <h1 class="title-sections">
+                <span>Super promoções</span>
+            </h1>
+
+            <div class="cards-promotions-container">
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
 
@@ -527,7 +791,7 @@
                     });
                 </script>
             </div>
-        </section> <br>
+        </section> <br> -->
 
         <section class="maisPopulares">
 
@@ -610,30 +874,57 @@
 
         </section> <br>
 
-        <!-- <section class="lancamentos">
+        <section class="lancamentos">
 
             <h3 class="title-sections">
                 <span>Lançamentos</span>
             </h3>
 
-            <div class="swiper-lancamentos">
-                <div class="banner-lancamento">
-                    <img src="img/games/lancamentos/theLastOfUs-part2.png" alt="The Last Of Us Part II">
-                    <a href="#"><span>COMPRE AGORA</span></a>
+            <div class="slide-lancamentos">
+                <div class="banner-lancamento" id="wall-1">
+                    <div>
+                        <a href="#wall-3" class="prev-wall"> <img src="img/icons/arrow_back_ios_white_24dp.svg" alt="">
+                        </a>
+
+                        <img src="img/games/lancamentos/theLastOfUs-part2.png" alt="The Last Of Us Part II">
+                        <a href=""><span>COMPRE AGORA</span></a>
+
+                        <a href="#wall-2" class="next-wall"> <img src="img/icons/arrow_forward_ios_white_24dp.svg"
+                                alt=""> </a>
+
+                    </div>
                 </div>
 
-                <div class="banner-lancamento">
-                    <img src="img/games/lancamentos/cod-coldWar.jpg" alt="Call of Duty: Cold War">
-                    <a href="#"><span>COMPRE AGORA</span></a>
+                <div class="banner-lancamento" id="wall-2">
+                    <div>
+                        <a href="#wall-1" class="prev-wall"> <img src="img/icons/arrow_back_ios_white_24dp.svg" alt="">
+                        </a>
+
+                        <img src="img/games/lancamentos/cod-coldWar.jpg" alt="Call of Duty: Cold War">
+                        <a href="" class="buy-btn-lancamentos"><span>COMPRE AGORA</span></a>
+
+                        <a href="#wall-3" class="next-wall"> <img src="img/icons/arrow_forward_ios_white_24dp.svg"
+                                alt=""> </a>
+                    </div>
                 </div>
 
-                <div class="banner-lancamento">
-                    <img src="img/games/lancamentos/fifa22.png" alt="FIFA 2022">
-                    <a href="#"><span>COMPRE AGORA</span></a>
+                <div class="banner-lancamento" id="wall-3">
+                    <div>
+                        <a href="#wall-2" class="prev-wall"> <img src="img/icons/arrow_back_ios_white_24dp.svg" alt="">
+                        </a>
+
+                        <img src="img/games/lancamentos/fifa22.png" alt="FIFA 2022">
+                        <a href="" class="buy-btn-lancamentos"><span>COMPRE AGORA</span></a>
+
+                        <a href="#wall-1" class="next-wall"> <img src="img/icons/arrow_forward_ios_white_24dp.svg"
+                                alt=""> </a>
+                    </div>
                 </div>
+
+                <script> window.location = "#wall-1"; </script>
+
             </div>
-
-        </section> -->
+        </section>
 
     </main>
 
@@ -648,7 +939,7 @@
         <section class="info-dh">
             <div class="firstContainer-footer">
 
-                <span id="payment-methods-title">Formas de pagamento</span>     
+                <span id="payment-methods-title">Formas de pagamento</span>
 
                 <div class="payment-type">
                     <div id="credit-card">
